src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alumni_Associations__c</fullName>
        <label>Alumni Associations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_ID__c</fullName>
        <label>Competitors ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Id__c</fullName>
        <label>Currency Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_C_External_ID__c</fullName>
        <description>Holds the Pivotal Contact ID</description>
        <externalId>true</externalId>
        <label>DM C External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Loader_ID__c</fullName>
        <description>Hold the load identifier for view filtering purposes</description>
        <label>Data Loader ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>The source system that supplied Salesforce with this record.</inlineHelpText>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Company_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Company Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Familiar_Name__c</fullName>
        <label>Familiar Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industrial_eNews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for a contact if record is to receive Industrial eNews distributions.</description>
        <inlineHelpText>Check this box if this Contact should receive Industrial eNews distributions.</inlineHelpText>
        <label>Industrial eNews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_File__c</fullName>
        <label>Load File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Associations__c</fullName>
        <label>Professional Associations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reports To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_s__c</fullName>
        <label>Role(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Bids\Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sports_Affiliations__c</fullName>
        <label>Sports Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <label>Spouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Id__c</fullName>
        <label>Time Zone Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_eNews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for a contact if record is to receive Utility eNews distributions.</description>
        <inlineHelpText>Check this box if this Contact should receive Utility eNews distributions.</inlineHelpText>
        <label>Utility eNews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Works_Out_of_Office__c</fullName>
        <label>Works Out of Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this Contact.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>